2007-10-26  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/camera.py:
	* src/chimera/interfaces/filterwheel.py:
	* src/chimera/interfaces/telescope.py:
	* src/chimera/interfaces/dome.py:
	* src/chimera/interfaces/focuser.py:

	New data options added. Sites should use this to provide
	information to controller's scripts.


2007-10-25  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/camera.py: New default filename
	format. No more seq_num. 

2007-10-16  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/meade.py: Fix typo.

	* src/chimera/drivers/theskytelescope.py: sys.exit is not our
	friend, raise RuntimeException instead.

	* src/chimera/drivers/sbig/sbig.py: Fix already exposing bugs.

	Add support for automatic/autoincremented exposure number in
	filenames

	* src/chimera/util/output.py: New faint (works?) function.

	
2007-10-16  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/console/commands:
	* src/chimera/controllers/console/commands/alias.py:
	* src/chimera/controllers/console/commands/__init__.py:
	* src/chimera/controllers/console/commands/quit.py:
	* src/chimera/controllers/console/commands/site.py:
	* src/chimera/controllers/console/commands/object.py:
	* src/chimera/controllers/console/chimeraconsole.py:
	* src/chimera/controllers/console/namespace.py:
	* src/chimera/controllers/console/command.py:
	* src/chimera/controllers/console/doc:
	* src/chimera/controllers/console/doc/use-cases.txt:
	* src/chimera/controllers/console/__init__.py:
	* src/chimera/controllers/console/console.py:
	* src/chimera/controllers/console/controller.py:
	* src/chimera/controllers/console/message.py:
	* src/chimera/controllers/console/commander.py:

	New directory structure for console. Commands have their own
	directory.

	Objects are now automaticaly binded. Use alias command to have a
	nice alias.
	
2007-09-26  P. Henrique Silva  <henrique@astro.ufsc.br>
